src/test/resources/de/cd4analysis/cocos/invalid/U0440.cd
package de.cd4analysis.cocos;

classdiagram U0440 {
  class A;
  class B;

  association Assoc1 A->B;
  association Assoc2 A<->B;
  association Assoc3 A<-B;
}
